<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_black_36dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/baseline_restaurant_menu_black_36dp"
        android:title="@string/nav_menu" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/baseline_collections_black_36dp"
        android:title="@string/nav_gallery" />
    <item
        android:id="@+id/nav_offers"
        android:icon="@drawable/baseline_card_giftcard_black_36dp"
        android:title="@string/nav_offers" />
    <item
        android:id="@+id/nav_aboutus"
        android:icon="@drawable/baseline_perm_identity_black_36dp"
        android:title="@string/nav_aboutus" />
</menu>