<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_notifications"
        android:icon="@drawable/baseline_notifications_black_36dp"
        android:title="@string/toolbar_notifications"
        app:showAsAction="always"

         />
    <item
        android:id="@+id/toolbar_location"
        android:icon="@drawable/baseline_place_black_36dp"
        android:title="@string/toolbar_location"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/toolbar_call"
        android:icon="@drawable/baseline_local_phone_black_36dp"
        android:title="@string/toolbar_call"
        app:showAsAction="always"
        />
</menu>